// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Infinite flip flops: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "const take = (xs, n) => n === 0 || is_null(xs) ? null : pair(head(xs), take(tail(xs), n - 1));
      const flips = pair(0, flops);
const flops = pair(1, flips);
stringify(take(flips, 6));",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "result": "[0, [1, [0, [1, [0, [1, null]]]]]]",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Infinite prime list: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "const take = (xs, n) => n === 0 || is_null(xs) ? null : pair(head(xs), take(tail(xs), n - 1));
      const sieve = (l) => pair(head(l), sieve(filter((x) => x % head(l) !== 0, l)));
const nat = (n) => pair(n, nat(n+1));
const primes = sieve(nat(2));
stringify(take(primes, 5));",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "result": "[2, [3, [5, [7, [11, null]]]]]",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Numeric 5 resolves to 5 on lazy: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "const take = (xs, n) => n === 0 || is_null(xs) ? null : pair(head(xs), take(tail(xs), n - 1));
5;",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "result": 5,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Ternary true ? 1 : head(null) resolves to 1 on lazy: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "const take = (xs, n) => n === 0 || is_null(xs) ? null : pair(head(xs), take(tail(xs), n - 1));
true ? 1 : head(null);",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`const ones = pair(1, ones) resolves to an infinite list of ones.: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "const take = (xs, n) => n === 0 || is_null(xs) ? null : pair(head(xs), take(tail(xs), n - 1));
      const ones = pair(1, ones);
stringify(take(ones, 5));",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "result": "[1, [1, [1, [1, [1, null]]]]]",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;
